--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
@@ -25,10 +26,12 @@
     "react-i18next": "^14.1.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "^3.9.0-rc.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.0"
   },
